--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,38 @@
+@online{GPS.gov2020,
+  author  = {{U.S. Air Force}},
+  title   = {Ligado Networks and GPS},
+  year    = {2020},
+  month   = {09},
+  url     = {https://www.gps.gov/spectrum/ligado/},
+  urldate = {2020-12-29},
+}
+
+@article{Griffiths2010,
+  author  = {H. {Griffiths} and N. {Willis}},
+  journal = {IEEE Transactions on Aerospace and Electronic Systems},
+  title   = {Klein Heidelberg—The First Modern Bistatic Radar System},
+  year    = {2010},
+  volume  = {46},
+  number  = {4},
+  pages   = {1571-1588},
+  doi     = {10.1109/TAES.2010.5595580},
+  url     = {https://ieeexplore.ieee.org/document/5595580},
+  urldate = {2020-12-30},
+}
+
+@inproceedings{Kuschel2013,
+  author    = {H. {Kuschel}},
+  booktitle = {2013 International Conference on Radar},
+  title     = {Approaching 80 years of passive radar},
+  year      = {2013},
+  volume    = {},
+  number    = {},
+  pages     = {213-217},
+  doi       = {10.1109/RADAR.2013.6651987},
+  url       = {https://ieeexplore.ieee.org/document/6651987},
+  urldate   = {2020-12-30},
+}
+
 @book{Malanowski2019,
   abstract  = {This cutting-edge resource introduces the basic concepts of passive bistatic radar, such as bistatic geometry, bistatic radar equation and analysis of different illuminating signals. These techniques, although known for almost a century, have not been developed intensively for decades, mainly due to technical limitations, but today, the passive radar concept can be realized in practice, and is of great interest for military and civilian users. This book provides insight into understanding the potential and limitations of passive radar systems, as well as the differences between signal processing in active and passive radar. Each of the signal processing stages typically applied in passive radar is described, including digital beamforming, clutter removal, target detection, localization and tracking. These concepts are illustrated with both simulated and measured data along with examples of passive radar systems. Correlation processing, which is crucial for passive radar operation, is },
   author    = {Malanowski, Mateusz},
@@ -6,5 +41,14 @@
   series    = {Artech House Radar Library},
   title     = {Signal Processing for Passive Bistatic Radar.},
   url       = {http://www.redi-bw.de/db/ebsco.php/search.ebscohost.com/login.aspx%3fdirect%3dtrue%26db%3dnlebk%26AN%3d2321918%26site%3dehost-live},
-  year      = {2019}
+  year      = {2019},
+}
+
+@techreport{RTCA2020,
+  author      = {{RTCA Inc.}},
+  title       = {Assessment of C-Band Mobile Telecommunications Interference Impact on Low Range Radar Altimeter Operations},
+  institution = {{RTCA Inc.}},
+  year        = {2020},
+  url         = {https://www.rtca.org/wp-content/uploads/2020/10/SC-239-5G-Interference-Assessment-Report_274-20-PMC-2073_accepted_changes.pdf},
+  urldate     = {2020-12-29},
 }
