Create theory of operation chapter draft

--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,25 @@
   urldate = {2020-12-30},
 }
 
+@book{Griffiths2017,
+  abstract  = {Developed by recognized experts in the field, this first-of-its-kind resource introduces the basic principles of passive radar technology and provides an overview of recent developments in this field and existing real passive radar systems. This book explains how passive radar works, how it differs from the active type, and demonstrates the benefits and drawbacks of this novel technology. Properties of illuminators, including ambiguity functions, digital vs. analog, digitally-coded waveforms, vertical-plane coverage, and satellite-borne and radar illuminators are explored. Readers find practical guidance on direct signal suppression, passive radar performance prediction, and detection and tracking. This book provides concrete examples of systems and results, including analog TV, FM radio, cell phone base stations, DVB–T and DAB, HF skywave transmissions, indoor WiFi, satellite-borne illuminators, and low-cost scientific remote sensing. Future developments and applications of passive r},
+  author    = {Griffiths, H. and Baker, Christopher J.},
+  isbn      = {9781630810368},
+  publisher = {Artech House},
+  series    = {Artech House Radar Series},
+  title     = {An Introduction to Passive Radar.},
+  url       = {http://www.redi-bw.de/db/ebsco.php/search.ebscohost.com/login.aspx%3fdirect%3dtrue%26db%3dnlebk%26AN%3d1511859%26site%3dehost-live},
+  year      = {2017},
+}
+
+@misc{Kloeck2019,
+  author   = {Klöck, Clemens},
+  title    = {Automotive Radar},
+  subtitle = {Teil 3},
+  url      = {https://moodle.hs-esslingen.de/moodle/mod/resource/view.php?id=184438},
+  urldate  = {2021-01-03},
+}
+
 @inproceedings{Kuschel2013,
   author    = {H. {Kuschel}},
   booktitle = {2013 International Conference on Radar},
@@ -42,6 +61,21 @@
   title     = {Signal Processing for Passive Bistatic Radar.},
   url       = {http://www.redi-bw.de/db/ebsco.php/search.ebscohost.com/login.aspx%3fdirect%3dtrue%26db%3dnlebk%26AN%3d2321918%26site%3dehost-live},
   year      = {2019},
+}
+
+@book{Richards2014,
+  author    = {Mark A. Richards, Ph.D.},
+  title     = {Fundamentals of Radar Signal Processing, Second Edition},
+  year      = {2014},
+  edition   = {2nd ed.},
+  publisher = {McGraw-Hill Education},
+  address   = {New York},
+  chapter   = {4. Radar Waveforms},
+  abstract  = {Fully updated and expanded, Fundamentals of Radar Signal Processing, Second Edition, offers comprehensive coverage of the basic digital signal processing techniques and technologies on which virtually all modern radar systems rely, including target and interference models, matched filtering, waveform design, Doppler processing, threshold detection, and measurement accuracy. The methods and interpretations of linear systems, filtering, sampling, and Fourier analysis are used throughout to provide a unified tutorial approach. End-of-chapter problems reinforce the material covered. Developed over many years of academic and professional education, this authoritative resource is ideal for graduate students as well as practicing engineers.},
+  isbn      = {9780071798327},
+  url       = {https://www.accessengineeringlibrary.com/content/book/9780071798327},
+  urldate   = {2021-01-12},
+  language  = {en},
 }
 
 @techreport{RTCA2020,
