--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{lipsum}
 \usepackage{pgfplots}
 \usepackage{subcaption}
+\usepackage{svg}
 \usepackage{tabularx}
 \usepackage{tikz-qtree}
 \usepackage{tikz}
@@ -35,19 +36,19 @@
 % textidote: ignore end
 \pagestyle{fancy}
 \fancyhead{}
-\fancyhead[RO,LE]{\leftmark}
+\fancyhead[L]{\leftmark}
 \fancyfoot{}
-\fancyfoot[CO,CE]{\thepage}
+\fancyfoot[C]{\thepage}
 \setlength{\headheight}{15pt}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername{} \ \thechapter.\ #1}{}}
 
-\graphicspath{{images/}}
+\graphicspath{{images/} {matlab/}}
 
 \sisetup{locale = US}
 
-\usetikzlibrary{arrows.meta,calc,math,positioning,shadows,trees}
+\usetikzlibrary{angles,arrows.meta,,calc,math,positioning,shadows,trees,quotes}
 \tikzset{>=Stealth}
-\pgfplotsset{width=9cm,compat=1.9}
+\pgfplotsset{width=9cm,compat=newest}
 
 \renewcommand*{\mkcitation}[1]{ #1}
 
