Move report into subdirectory

--- a/report.tex
+++ b/report.tex
@@ -58,16 +58,16 @@
 
 \begin{document}
 
-\include{titlepage}
-\include{chapters/abstract}
-\include{chapters/declaration}
+\include{report/titlepage}
+\include{report/chapters/abstract}
+\include{report/chapters/declaration}
 
 \tableofcontents
 \listoffigures
 
-\include{chapters/introduction}
-\include{chapters/theory_of_operation}
-\include{chapters/conclusion}
+\include{report/chapters/introduction}
+\include{report/chapters/theory_of_operation}
+\include{report/chapters/conclusion}
 
 \printbibliography
 
