Create introductory slides for beamer presentation

--- a/references.bib
+++ b/references.bib
@@ -31,6 +31,13 @@
   year      = {2017},
 }
 
+@online{Hensoldt2019,
+  title   = {TwInvis – Passive Radar},
+  author  = {{HENSOLDT Sensors GmbH}},
+  url     = {https://www.hensoldt.net/products/radar-iff-and-datalink/twinvis-passive-radar/},
+  urldate = {2021-01-21},
+}
+
 @misc{Kloeck2019,
   author   = {Klöck, Clemens},
   title    = {Automotive Radar},
@@ -78,6 +85,20 @@
   language  = {en},
 }
 
+@book{Rijpsma2005,
+  author = {Rijpsma, Jeroen and Brakel, Klaas, van},
+  title  = {Radarstellung BIBER: Kustverdediging op Voorne 1940-1945},
+  isbn   = {9789078012047},
+  year   = {2005},
+}
+
+@online{RoyalAirForce1945,
+  author  = {{Royal Airforce}},
+  title   = {RAF-Basis Poling},
+  url     = {http://media.iwm.org.uk/ciim5/36/281/large_000000.jpg},
+  urldate = {2021-01-21},
+}
+
 @techreport{RTCA2020,
   author      = {{RTCA Inc.}},
   title       = {Assessment of C-Band Mobile Telecommunications Interference Impact on Low Range Radar Altimeter Operations},
@@ -85,4 +106,11 @@
   year        = {2020},
   url         = {https://www.rtca.org/wp-content/uploads/2020/10/SC-239-5G-Interference-Assessment-Report_274-20-PMC-2073_accepted_changes.pdf},
   urldate     = {2020-12-29},
+}
+
+@online{WattsonWatt1935,
+  title   = {The Daventry Experiment},
+  author  = {Wattson-Watt, Robert, Sir and Wilkins, Arnold},
+  url     = {https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/14235713/image/original-251255935b49758e11d78636b45f7e25.jpg},
+  urldate = {2021-01-21},
 }
