--- a/report.tex
+++ b/report.tex
@@ -6,6 +6,7 @@
 \usepackage[english=american]{csquotes}
 \usepackage[hidelinks]{hyperref}
 \usepackage[english]{babel}
+\usepackage[nooldvoltagedirection]{circuitikz}
 \usepackage[style=iso-numeric,minnames=1,maxnames=3,giveninits,uniquename=init]{biblatex}
 \usepackage[T1]{fontenc}
 \usepackage[super]{nth}
@@ -25,6 +26,7 @@
 \usepackage{tabularx}
 \usepackage{tikz-qtree}
 \usepackage{tikz}
+\usepackage{contour}
 \usepackage{tocbibind}
 
 \addbibresource{references.bib}
@@ -46,9 +48,14 @@
 
 \sisetup{locale = US}
 
-\usetikzlibrary{angles,arrows.meta,,calc,math,positioning,shadows,trees,quotes}
+\usetikzlibrary{angles,arrows.meta,calc,math,positioning,shadows,trees,quotes}
 \tikzset{>=Stealth}
 \pgfplotsset{width=9cm,compat=newest}
+\tikzset{
+  invisible/.style={opacity=0},
+  visible on/.style={alt={#1{}{invisible}}},
+  alt/.code args={<#1>#2#3}{},
+}
 
 \renewcommand*{\mkcitation}[1]{ #1}
 
