Avoid putting tex files in secondary subdirs

--- a/beamer.tex
+++ b/beamer.tex
@@ -62,9 +62,9 @@
     \tableofcontents
   \end{frame}
 
-  \include{beamer/slides/introduction}
-  \include{beamer/slides/history}
-  \include{beamer/slides/bistatic_principle}
+  \include{beamer/introduction}
+  \include{beamer/history}
+  \include{beamer/bistatic_principle}
 
   \begin{frame}[allowframebreaks]
     \frametitle{Quellen}
