--- a/report.tex
+++ b/report.tex
@@ -66,15 +66,15 @@
 \begin{document}
 
 \include{report/titlepage}
-\include{report/chapters/abstract}
-\include{report/chapters/declaration}
+\include{report/abstract}
+\include{report/declaration}
 
 \tableofcontents
 \listoffigures
 
-\include{report/chapters/introduction}
-\include{report/chapters/theory_of_operation}
-\include{report/chapters/conclusion}
+\include{report/introduction}
+\include{report/theory_of_operation}
+\include{report/conclusion}
 
 \printbibliography
 
