--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,4 +1,4 @@
-% !TeX root = ../../report.tex
+% !TeX root = ../report.tex
 \chapter{Conclusion}
 
 This document explained the basic principles behind passive radar. First a brief summary of technological history was presented. It can be seen, that while interest in passive radar technology was intermittent, its merits clearly warrant continued investigation.
