--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,4 +1,4 @@
-% !TeX root = ../../report.tex
+% !TeX root = ../report.tex
 \chapter{Introduction}\label{chp:introduction}
 
 Today's electromagnetic wave spectrum is sectioned into bands. While certain bands are inherently limited in their usefulness, due to atmospheric absorption, meteorologic, geologic or cosmic interference, most remaining bands are allocated to certain use-cases by regulatory institutions. The list of use-cases is immense and may range from radio astronomy, amateur radio, to maritime or aeronautical navigation, \emph{including radar}. However, possibly the largest holder of radio spectrum is \emph{telecommunications}. This reflects our societies growing demand for ever faster communications- and data-transfer-services. Sometimes this need conflicts or supersedes other use-cases. As with the recent 5G expansions in the L- and C-band, causing concerns for neighboring GPS~\cite{GPS.gov2020} and radar altimeter~\cite{RTCA2020} interest groups about their uninterrupted operability.
