Complete section about the bistatic principle

--- a/beamer.tex
+++ b/beamer.tex
@@ -33,7 +33,7 @@
 \sisetup{locale = DE}
 \tikzset{>=Stealth}
 \usetheme{metropolis}
-\usetikzlibrary{angles,arrows.meta,,calc,math,positioning,shadows,trees,quotes}
+\usetikzlibrary{angles,arrows.meta,,calc,math,positioning,shadows,shapes.misc,trees,quotes}
 \tikzset{
   invisible/.style={opacity=0},
   visible on/.style={alt={#1{}{invisible}}},
