--- a/beamer/history.tex
+++ b/beamer/history.tex
@@ -15,7 +15,7 @@
         \begin{column}{0.5\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[height=5cm]{daventry_experiment.jpg}
+                \includegraphics[width=\linewidth{},height=\textheight{}-3cm,keepaspectratio]{daventry_experiment.jpg}
                 \caption{Skizze des Daventry Experiments von 1935~\cite{WattsonWatt1935}.}
             \end{figure}
         \end{column}
@@ -37,7 +37,7 @@
         \begin{column}{0.5\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[height=5cm]{chain_home.jpg}
+                \includegraphics[width=\linewidth{},height=\textheight{}-3cm,keepaspectratio]{chain_home.jpg}
                 \caption{Chain Home Antennen der Royal Airforce. Foto 1945~\cite{RoyalAirForce1945}.}
             \end{figure}
         \end{column}
@@ -51,7 +51,7 @@
         \begin{column}{0.44\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[height=4.5cm]{klein_heidelberg.jpg}
+                \includegraphics[width=\linewidth{},height=\textheight{}-3.5cm,keepaspectratio]{klein_heidelberg.jpg}
                 \caption{Antenne des Klein Heidelberg Empfängers BIEBER (Oostvoorne, NL). Foto 1947~\cite{Rijpsma2005} as cited in~\cite{Griffiths2010}.}
             \end{figure}
         \end{column}
@@ -73,7 +73,7 @@
         \begin{column}{0.55\textwidth}
             \begin{figure}
                 \centering
-                \includegraphics[height=4.75cm]{twinvis.png}
+                \includegraphics[width=\linewidth{},height=\textheight{}-3cm,keepaspectratio]{twinvis.png}
                 \caption{TwInvis®. Modernes Passivradarsystem des Unternehmens Hensoldt~\cite{Hensoldt2019}.}
             \end{figure}
         \end{column}
