Add benefits slide

--- a/beamer/introduction.tex
+++ b/beamer/introduction.tex
@@ -52,6 +52,19 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Warum so umständlich?}
+
+    Eigenschaften:
+    \begin{itemize}
+        \item \textbf{Keine} eigenen \textbf{Abstrahlungen} \faBroadcastTower{}
+        \item \textbf{Redundanz} durch bestehende Infrastruktur \faCheckDouble{}
+        \item \textbf{Kostengünstiger} \faMoneyBillWave{}
+        \item \textbf{Recycling} bestehender Bänder \faRecycle{}
+        \item \textbf{Versteckt} operierbar \faEyeSlash{}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
     \frametitle{Beleuchtungsquellen (Illuminators of Opportunity)}
 
     \begin{columns}
