--- a/beamer.tex
+++ b/beamer.tex
@@ -72,6 +72,7 @@
   \include{beamer/introduction}
   \include{beamer/bistatic_principle}
   \include{beamer/signal_correlation}
+  \include{beamer/conclusion}
 
   \begin{frame}[allowframebreaks]
     \frametitle{Quellen}
