Use german title

--- a/beamer.tex
+++ b/beamer.tex
@@ -48,7 +48,7 @@
     online = {Online},
 }
 
-\title{Passive Radar}
+\title{Passivradar}
 \subtitle{Grundlagen der Signalverarbeitung}
 \date{Jannuar 2021}
 \author{Andreas Baulig}
