Demonstrate bistatic intersectors

--- a/beamer/signal_correlation.tex
+++ b/beamer/signal_correlation.tex
@@ -103,3 +103,18 @@
         \item \textbf{Ellipsoiden} verschiedener Rx-Tx Paare \textbf{übereinanderlegen}
     \end{enumerate}
 \end{frame}
+
+
+\begin{frame}
+    \frametitle{Schnittpunkte der bistatischen Ellipse}
+
+    \begin{figure}
+        \centering
+        \begin{adjustbox}{max width=\linewidth,totalheight=\textheight-5\baselineskip}
+            \begin{tikzpicture}
+                \input{graphs/bistatic-intersector.tikz}
+            \end{tikzpicture}
+        \end{adjustbox}
+        \caption{Schnittpunktmethode}
+    \end{figure}
+\end{frame}
