--- a/beamer/introduction.tex
+++ b/beamer/introduction.tex
@@ -1,5 +1,5 @@
 % !TeX root = ../beamer.tex
-\section{Was ist Passiv Radar}
+\section{Was ist Passivradar}
 
 \begin{frame}
     \frametitle{Was ist Radar}
