Properly calculate angles of intersecting ellipses

--- a/beamer.tex
+++ b/beamer.tex
@@ -34,7 +34,7 @@
 \sisetup{locale = DE}
 \tikzset{>=Stealth}
 \usetheme[progressbar=frametitle]{metropolis}
-\usetikzlibrary{angles,arrows.meta,,calc,math,positioning,shadows,shapes.misc,tikzmark,trees,quotes}
+\usetikzlibrary{angles,arrows.meta,calc,math,positioning,shadows,shapes.misc,tikzmark,trees,quotes}
 \tikzset{
   invisible/.style={opacity=0},
   visible on/.style={alt={#1{}{invisible}}},
