Combine appendix slides in single file

--- a/beamer.tex
+++ b/beamer.tex
@@ -81,8 +81,7 @@
 
   \appendix
   \section{BACKUP}
-  \include{beamer/history}
-  \include{beamer/illuminators}
+  \include{beamer/appendix}
 }
 
 \end{document}
