Implement phased array sampling slide

--- a/beamer/signal_correlation.tex
+++ b/beamer/signal_correlation.tex
@@ -75,6 +75,20 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Abtastung durch Antennenrichtwirkung}
+
+    \begin{figure}
+        \centering
+        \begin{adjustbox}{max width=\linewidth,totalheight=\textheight-5\baselineskip}
+            \begin{tikzpicture}
+                \input{graphs/phased-array.tikz}
+            \end{tikzpicture}
+        \end{adjustbox}
+        \caption{Nutzung der Antennenrichtwirkung zur Winkelbestimmung.}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
     \frametitle{Schnittpunkte der bistatischen Ellipse}
 
     \begin{figure}
@@ -84,6 +98,6 @@
                 \input{graphs/bistatic-intersector.tikz}
             \end{tikzpicture}
         \end{adjustbox}
-        \caption{Schnittpunktmethode}
+        \caption{Berechnung der Schnittpunkte zur Objektlokalisierung.}
     \end{figure}
 \end{frame}
