Remove formula from conclsion slide

--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -10,7 +10,7 @@
                 \item Begriffsdefinition Passivradar
                 \item Monostatische und bistatische Geometrie
                 \item Bistatische Entfernung und Geschwindigkeit
-                \item Methode zur Bestimmung der bistatischen Entf.\ und Geschw.
+                \item Methoden zur Umwandlung zwischen bistatischer und monostatischer Geometrie
             \end{itemize}
         \end{column}
         \begin{column}{0.6\textwidth}
@@ -32,9 +32,6 @@
                     \input{graphs/bistatic-velocity.tikz}
                 \end{tikzpicture}
             \end{adjustbox}
-            \tiny\begin{equation}
-                \psi(R, V) = \int_{-T/2}^{T/2} {x_{e}(s) \cdot x_{r}^{*}} \left( s - \frac{R}{c} \right)\mathrm{e}^{- \mathrm{j} \frac{2 \pi}{\lambda} V s} \, d s
-            \end{equation}\normalsize
         \end{column}
     \end{columns}
 
