Add counter-stealth to properties

--- a/beamer/introduction.tex
+++ b/beamer/introduction.tex
@@ -61,5 +61,6 @@
         \item \textbf{Kostengünstiger} \faMoneyBillWave{}
         \item \textbf{Recycling} bestehender Bänder \faRecycle{}
         \item \textbf{Versteckt} operierbar \faEyeSlash{}
+        \item Konter gegen \textbf{Stealth} \faFighterJet{}
     \end{itemize}
 \end{frame}
