Remove appendix from beamer

--- a/beamer.tex
+++ b/beamer.tex
@@ -79,9 +79,9 @@
     \printbibliography
   \end{frame}
 
-  \appendix
-  \section{BACKUP}
-  \include{beamer/appendix}
+  %\appendix
+  %\section{BACKUP}
+  %\include{beamer/appendix}
 }
 
 \end{document}
